--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
                     I really hope you enjoy this "small" little project that I came up with. I put 
                     small in quotes because this was not a small feat at all. You'll see on the videos I assume. I would start out 
                     in the "How I Made This" tab. That's where I'll be explaining how I made this website.
-                    This was grueling hard work, but will be so worth it if I get a nice reaction and a smile out of you.
+                    This was grueling hard work, but will be so worth it if I get a nice reaction and a smile out of you. You are, of course my best friend! 
+                    I really need to go to the gym lol, but I have just been so busy doing this! 
                 </p>
             </div>
             <div class="column-right"></div>
