--- a/howMade.html
+++ b/howMade.html
@@ -19,7 +19,7 @@
                 <h1>This is going to be the videos of me making this</h1>
                 <h2>These are my "vlogs", watch from left to right. You might can full screen if need be</h2>
                 <video class = "videos" controls src="1st.mp4"></video>
-                <video class = "videos" controls src="2nd.mov"></video>
+                <video class = "videos" controls src="2nd.mp4"></video>
             </div>
             <div class="column-right"></div>
         </div>
