--- a/dayMet.html
+++ b/dayMet.html
@@ -19,7 +19,30 @@
                 <h1>This is going to be the story of how we met</h1>
                 <h2>I know you know how it went down, but i'm just going to jog your memory.</h2>
                 <p class = "doing">
-                    There are tabs at the top of the page, make sure to click them!
+                    Obviously we remember the day we met. Well, I at least hope you do. You did think we started dating in 2023
+                    so maybe you dont remember some things. First, I am going to tell you about the man that I was before you. 
+                    You can see the picture of me there. Girls bid day, August 20th, 2022. I was wandering around, aimlessly, just
+                    hoping to make a friend and get out of my apartment. It was a lonely summer for me in Lindale. My parents were gone,
+                    friends were at work, no internet at home. All I had was work and the gym. I moved in to The Cardinal on August 5th, 2023.
+                    None of my roommates moved in until the 14th, so I was lonely. Bid day was the first day that I was able to go out and try 
+                    to make new friends and hang out with people. Little did I know what I had in store for me that night. I was hanging out at
+                    the Zeta bid day because of Lillian and was just standing there awkwardly because I had no one to talk to. I stood there for hours 
+                    because I hadn't talked to anyone in person all summer and I was nervous. After a failed attempt to make some friends and meet new people,
+                    I went home and just sat in my room. After a few hours, I get a text saying that Snu was throwing and that I should come. 
+                    Being fresh out of pledgeship, I jumped to the idea of a party at the house. I was so excited to see everybody again and 
+                    be in a place where I was wanted. After I got dressed, I made sure to go to 508 to see if the other girls were going. Eventually
+                    we all left for Snu. After being there for an hour or two, not many people had come to talk to me and I was extrememly sad.
+                    Eventually, I found Lillian and went to Andrew's room with her and a few friends. I sat up there and talked to everyone and had my feet
+                    out the window listening to music and just wishing that I had someone to talk to. After a while of sitting there. We were going to 
+                    make an attempt to go home. I was outside of Andrew's room when I see Sydney walk in with the most beautiful girl I had ever seen.
+                    I genienly think that my jaw dropped a little. I rememebr thinking in my head that I had you on BeReal and reacted to a few of your BeReals
+                    and liked your stories on Instagram hoping you'd notice me. According to you, you had noticed me all along and went the Snu to meet me.
+                    Is this the truth? I guess we will never know until I put you on a lie detector. I remember you walked in and seriously my heart was
+                    pounding. I didn't know what to say or do, but words just started coming out and I kept following you around. We talked for a while
+                    and I eventually told you about my stinky apartment and you said that you would give me a candle for my apartnemnt. After talking for a long
+                    time, we all walked home together and went to Sydney's apartment. There, getting to know you better, I knew that I wanted you. We talked in that room
+                    for so long, Sydney was falling asleep on the couch while we just talked and talked and you said that the enemy from Kung Fu panda was a hot cartoon 
+                    character.
                 </p>
             </div>
             <div class="column-right"></div>
