--- a/dayMet.html
+++ b/dayMet.html
@@ -18,7 +18,8 @@
             <div class = "column-left">
                 <h1>This is going to be the story of how we met</h1>
                 <h2>I know you know how it went down, but i'm just going to jog your memory.</h2>
-                <p class = "doing">
+                <img class="img_deg" src="./IMG_3004.jpg"  style="float:left; margin-right: 2px; margin-top: 15px">
+                <p class = "done">
                     Obviously we remember the day we met. Well, I at least hope you do. You did think we started dating in 2023
                     so maybe you dont remember some things. First, I am going to tell you about the man that I was before you. 
                     You can see the picture of me there. Girls bid day, August 20th, 2022. I was wandering around, aimlessly, just
@@ -41,13 +42,14 @@
                     pounding. I didn't know what to say or do, but words just started coming out and I kept following you around. We talked for a while
                     and I eventually told you about my stinky apartment and you said that you would give me a candle for my apartnemnt. After talking for a long
                     time, we all walked home together and went to Sydney's apartment. There, getting to know you better, I knew that I wanted you. We talked in that room
-                    for so long, Sydney was falling asleep on the couch while we just talked and talked and you said that the enemy from Kung Fu panda was a hot cartoon 
-                    character.
+                    for so long, Sydney was falling asleep on the couch while we just talked and talked and you said that the villian from Kung Fu panda was a hot cartoon 
+                    character. We eventually left, and on the way out, I popped the question and asked for your snap/number. You gave them to me and we ended up texting right after That
+                    I remember just standing in the shower staring at my phone smiling ear to ear while I was talking to me. I kept thinking of how badly I wanted to see you again
+                    I was seriously obsessed from the start and I still am to this day.
                 </p>
             </div>
             <div class="column-right"></div>
-            <img src="./IMG_3004.jpg" alt="illustration"
-            class = "img_deg">
+            
         </div>
     </section>
 
