--- a/dayMet.html
+++ b/dayMet.html
@@ -13,12 +13,12 @@
             <a href="index.html">Back To The Home Page</a> 
         </div>
     </nav>
-    <section class="hero">
-        <div class="hero-container">
-            <div class = "column-left">
+    <section class="hero2">
+        <div class="hero-container2">
+            <audio class="music2" autoplay loop controls src="PMM.mp3"></audio>
                 <h1>This is going to be the story of how we met</h1>
                 <h2>I know you know how it went down, but i'm just going to jog your memory.</h2>
-                <img class="img_deg" src="./IMG_3004.jpg"  style="float:left; margin-right: 2px; margin-top: 15px">
+                <img class="img_deg2" src="./IMG_3004.jpg"  style="float:left; margin-right: 2px; margin-top: 15px">
                 <p class = "done">
                     Obviously we remember the day we met. Well, I at least hope you do. You did think we started dating in 2023
                     so maybe you dont remember some things. First, I am going to tell you about the man that I was before you. 
