--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
                     small in quotes because this was not a small feat at all. You'll see on the videos I assume. I would start out 
                     in the "How I Made This" tab. That's where I'll be explaining how I made this website.
                     This was grueling hard work, but will be so worth it if I get a nice reaction and a smile out of you. You are, of course my best friend! 
-                    I really need to go to the gym lol, but I have just been so busy doing this! 
+                    I really need to go to the gym lol, but I have just been so busy doing this! Looking at this, I am proud of it,
+                    but it is very underwhelming lol. But! I know you will enjoy it just because I put my time into it. I love you so much
+                    and I can't wait to see you in a few days. Let me know if I should put more on this eventually! This is a live website that you
+                    can visit at any time!
                 </p>
             </div>
             <div class="column-right"></div>
